objects/STG_Server_Deployment__c/STG_Server_Deployment__c.object-meta.xml
<CustomObject>
    <description>This table will be used to stage SERVER DEPLOYMENT data that is migrated from Snowflake into Salesforce. The object will contain multiple fields. Flows or Apex batches will be used to pick the data up from the Staging table and update the relevant Salesforce data.</description>
    <label>STG Server Deployment</label>
    <nameField>
        <displayFormat>STGSD-{0000000000}</displayFormat>
        <label>STG SD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STG Server Deployment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>