objects/STG_Server_Deployment__c/fields/Data_as_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_as_of_Date__c</fullName>
    <label>Data as of Date</label>
    <type>Date</type>
</CustomField>