objects/STG_Server_Deployment__c/fields/Data_Set_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Set_Type__c</fullName>
    <label>Data Set Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seats Deployed</fullName>
            </value>
            <value>
                <fullName>User Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>