objects/STG_Server_Deployment__c/fields/Fault_Message__c.field-meta.xml
<CustomField>
    <fullName>Fault_Message__c</fullName>
    <label>Fault Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>