objects/STG_Server_Deployment__c/fields/First_Platform_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Platform_Login__c</fullName>
    <label>First Platform Login</label>
    <type>Date</type>
</CustomField>