objects/STG_Server_Deployment__c/fields/Last_Platform_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Platform_Login__c</fullName>
    <label>Last Platform Login</label>
    <type>Date</type>
</CustomField>