objects/STG_Server_Deployment__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <label>Last Refresh Date</label>
    <type>Date</type>
</CustomField>