objects/STG_Server_Deployment__c/fields/Processed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Processed_DateTime__c</fullName>
    <label>Processed DateTime</label>
    <type>DateTime</type>
</CustomField>