objects/STG_Server_Deployment__c/fields/Seats_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Seats_Deployed__c</fullName>
    <label>Seats Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>