objects/STG_Server_Deployment__c/fields/Server_Deployment_ID__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Server Deployment ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>