objects/STG_Server_Deployment__c/fields/Update_Error__c.field-meta.xml
<CustomField>
    <fullName>Update_Error__c</fullName>
    <inlineHelpText>If there was an error in the update process, it will be reflected here</inlineHelpText>
    <label>Update Error</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>