objects/STG_Server_Deployment__c/fields/Weekly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Active_Users__c</fullName>
    <label>Weekly Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>