objects/STG_Server_Deployment__c/listViews/Unprocessed_Created_in_last_7_days.listView-meta.xml
<ListView>
    <fullName>Unprocessed_Created_in_last_7_days</fullName>
    <columns>NAME</columns>
    <columns>Data_Source__c</columns>
    <columns>Data_Set_Type__c</columns>
    <columns>Seats_Deployed__c</columns>
    <columns>Weekly_Active_Users__c</columns>
    <columns>Server_Deployment_ID__c</columns>
    <columns>Fault_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Processed_DateTime__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unprocessed - Created in last 7 days</label>
</ListView>